welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
 if(21>n){
 	return 21-n;
 
 		return -21+n
 }
}